rabbitmq/k8s/consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
spec:
  selector:
    app: consumer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000 # Assuming the app runs on port 5000
