rabbitmq/k8s/producer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-producer
  template:
    metadata:
      labels:
        app: nodejs-producer
    spec:
      containers:
        - name: producer
          image: joshishrihari/producer:latest # Change this to your image
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-producer-service
spec:
  selector:
    app: nodejs-producer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3500
  type: ClusterIP
