rabbitmq/k8s/producer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: ninadm13/producer:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: producer
spec:
  selector:
    app: producer
  ports:
    - port: 8000
      targetPort: 8000
