rabbitmq/k8s/producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-producer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 
spec:
  rules:
    - host: nodejs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-producer-service
                port:
                  number: 80
